teste importando README.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 	<meta property="og:site_name" content="Asafe Ramos | Desenvolvedor Full Stack">
 	<meta property="og:title" content="Asafe Ramos | Desenvolvedor Full Stack">
 	<meta property="og:description" content="Desenvolvedor Full Stack com 10 anos de experiência e visão ampla de mercado, contribuições nas áreas de comunicação e marketing com foco em análise de dados.">
-	<meta property="og:image" content="{{ "/images/og.jpg" | prepend: site.baseurl }}">
+	<meta property="og:image" content="{{ "images/og.jpg" | prepend: site.baseurl }}">
 
 	<meta property="og:url" content="http://asaferamos.com/">
 	<meta property="article:publisher" content="http://facebook.com/asaferamos">
@@ -18,7 +18,7 @@
     <meta name="keywords" content="goiania, full stack, asafe ramos, desenvolvimento, php, laravel, vue.js, css3, jquery, desenvolvedor em goiania, programacao goiania">
     <meta name="robots" content="index, follow">
 
-	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
 
